--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "opencv4nodejs": "^4.7.5"
-  }
+    "opencv4nodejs": "^4.7.5",
+    "string-hash": "^1.1.3",
+    "umi": "^2.0.3"
+  },
+  "devDependencies": {}
 }
