--- a/server/package.json
+++ b/server/package.json
@@ -20,10 +20,13 @@
   "dependencies": {
     "antd-mobile": "^2.2.6",
     "egg": "^2.12.0",
+    "egg-mongoose": "^3.1.1",
     "egg-scripts": "^2.10.0",
+    "egg-validate": "^2.0.2",
     "egg-view-assets": "^1.3.0",
     "egg-view-nunjucks": "^2.2.0",
     "prop-types": "^15.6.2",
+    "qs": "^6.7.0",
     "react": "^16.6.0",
     "react-sticky": "^6.0.3",
     "umi": "^2.2.2"
