--- a/server/app/web/package.json
+++ b/server/app/web/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "dayjs": "^1.8.12",
     "dva-logger": "^1.0.0",
     "umi-request": "^1.0.6"
   }
