--- a/server/package.json
+++ b/server/package.json
@@ -18,9 +18,11 @@
     "autod": "autod"
   },
   "dependencies": {
+    "ali-oss": "^6.1.1",
     "antd-mobile": "^2.2.6",
     "egg": "^2.12.0",
     "egg-mongoose": "^3.1.1",
+    "egg-oss": "^2.0.0",
     "egg-scripts": "^2.10.0",
     "egg-validate": "^2.0.2",
     "egg-view-assets": "^1.3.0",
@@ -29,7 +31,8 @@
     "qs": "^6.7.0",
     "react": "^16.6.0",
     "react-sticky": "^6.0.3",
-    "umi": "^2.2.2"
+    "umi": "^2.2.2",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "antd-mobile": "^2.2.6",
