--- a/server/app/web/package.json
+++ b/server/app/web/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "dayjs": "^1.8.12",
     "dva-logger": "^1.0.0",
+    "socket.io-client": "^2.2.0",
     "umi-request": "^1.0.6"
   }
 }
