--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "egg-mongoose": "^3.1.1",
     "egg-oss": "^2.0.0",
     "egg-scripts": "^2.10.0",
+    "egg-socket.io": "^4.1.5",
     "egg-validate": "^2.0.2",
     "egg-view-assets": "^1.3.0",
     "egg-view-nunjucks": "^2.2.0",
